# flags-macro-rs

./: Cargo.toml  LICENSE.md  README.md  README.tpl
src/: lib.rs
tests/: test.rs
