[package]
name = "flags-macro"
version = "0.1.2"
authors = ["yvt <i@yvt.jp>"]
description = "Provides a helper macro for writing bitflags."
keywords = ["bitflags", "bitflag", "enum", "flag", "macros"]
categories = ["no-std"]
license = "CC0-1.0"
repository = "https://github.com/yvt/flags-macro-rs"
readme = "README.md"

[dev-dependencies]
bitflags = "1.0.4"
enumflags = "0.4.1"
enumflags_derive = "0.4.1"
